Made period persist, corrected dark mode.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,26 +31,12 @@
 
 	--max-width: 360px;
 	--tomato-size: 360px;
-	--tomato-green: #369f2d;
 }
 
 @media screen and (prefers-color-scheme: dark) {
 	:root {
-		/* Catppuccino mocha theme. */
-		--rosewater: #f5e0dc;
-		--flamingo: #f2cdcd;
-		--pink: #f5c2e7;
-		--mauve: #cba6f7;
-		--red: #f38ba8;
-		--maroon: #eba0ac;
-		--peach: #fab387;
-		--yellow: #f9e2af;
-		--green: #a6e3a1;
-		--teal: #94e2d5;
-		--sky: #89dceb;
-		--sapphire: #74c7ec;
-		--blue: #89b4fa;
-		--lavender: #b4befe;
+		--maroon: #b43641;
+		--yellow: #ac6e16;
 		--text: #cdd6f4;
 		--subtext1: #bac2de;
 		--subtext0: #a6adc8;
@@ -89,6 +75,7 @@ body {
 	height: 100svh;
 	color: var(--text);
 	background: var(--crust);
+	user-select: none;
 }
 
 a {
