--- a/src/app/page.css
+++ b/src/app/page.css
@@ -1,6 +1,6 @@
 main {
 	position: relative;
-	height: calc(90vh);
+	height: calc(80vh);
 }
 
 .tomatoBackground {
@@ -10,8 +10,9 @@ main {
 	left: 50%;
 	border-radius: 50%;
 
-	-webkit-transition: width 0.6s ease-in, height 0.6s ease-in;
-	transition: width 0.6s ease-in, height 0.6s ease-in;
+	-webkit-transition: background-color 0.6s, width 0.6s ease-in,
+		height 0.6s ease-in;
+	transition: background-color 0.6s, width 0.6s ease-in, height 0.6s ease-in;
 	transform: translate3d(-50%, -50%, 0) rotate(0);
 }
 
@@ -28,11 +29,11 @@ main {
 	height: 200%;
 }
 
-.tomatoBackground.red {
+.tomatoBackground.focus {
 	background-color: var(--maroon);
 }
-.tomatoBackground.green {
-	background-color: var(--tomato-green);
+.tomatoBackground.break {
+	background-color: var(--yellow);
 }
 
 @keyframes morph {
